WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49024
Windowed plugins aren't clipped in WebKit2 on Windows
https://bugs.webkit.org/show_bug.cgi?id=49024
Summary
Windowed plugins aren't clipped in WebKit2 on Windows
Adam Roben (:aroben)
Reported
2010-11-04 14:24:46 PDT
Windowed plugins aren't clipped in WebKit2 on Windows
Attachments
Patch
(13.02 KB, patch)
2010-11-04 14:26 PDT
,
Adam Roben (:aroben)
jhoneycutt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-11-04 14:26:50 PDT
Created
attachment 72980
[details]
Patch
Adam Roben (:aroben)
Comment 2
2010-11-05 07:49:49 PDT
Committed
r71416
: <
http://trac.webkit.org/changeset/71416
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug