Use a window region to clip windowed plugins

Fixes <http://webkit.org/b/49024> <rdar://problem/8487847> Windowed
plugins aren't clipped in WebKit2 on Windows

Reviewed by Jon Honeycutt.

WebKit2:

* WebProcess/Plugins/Netscape/win/NetscapePluginWin.cpp:
(WebKit::registerPluginView): Removed the CS_PARENTDC style. This style
makes Windows ignore the window region and always clip to the parent
window. Also pass WebKit.dll's HINSTANCE as part of the WNDCLASSW
struct so that the window class will be specific to WebKit.dll rather
than to WebKit2WebProcess.exe. This is useful for testing, but also
more pedantically correct.
(WebKit::setWindowRegion): Helper function to set a window region and
deal with ownership of the HRGN correctly.
(WebKit::NetscapePlugin::platformGeometryDidChange): Make an HRGN that
corresponds to m_clipRect and set it on the plugin's window.

WebKitTools:

Add a plugin test to show that windowed plugins are clipped correctly

* DumpRenderTree/TestNetscapePlugIn/Tests/win/WindowRegionIsSetToClipRect.cpp: Added.
(WindowRegionIsSetToClipRect::WindowRegionIsSetToClipRect): Initialize members.
(WindowRegionIsSetToClipRect::NPP_SetWindow): Check that our window
region matches the clip rect we know we should have based on
window-region-is-set-to-clip-rect.html, and check that our window class
doesn't have the CS_PARENTDC style.

* DumpRenderTree/TestNetscapePlugIn/win/TestNetscapePlugin.vcproj:
Added WindowRegionIsSetToClipRect.

LayoutTests:

Add a test to show that windowed plugins are clipped correctly

* platform/win/plugins/window-region-is-set-to-clip-rect-expected.txt: Added.
* platform/win/plugins/window-region-is-set-to-clip-rect.html: Added.

Canonical link: https://commits.webkit.org/61903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71416 268f45cc-cd09-0410-ab3c-d52691b4dbfc