WebKit2/WebProcess/Plugins/Netscape/win/NetscapePluginWin.cpp
@@ -33,6 +33,8 @@
 
 using namespace WebCore;
 
+extern "C" HINSTANCE gInstance;
+
 namespace WebKit {
 
 static LPCWSTR windowClassName = L"org.webkit.NetscapePluginWindow";
@@ -45,8 +47,9 @@ static void registerPluginView()
     didRegister = true;
 
     WNDCLASSW windowClass = {0};
-    windowClass.style = CS_DBLCLKS | CS_PARENTDC;
+    windowClass.style = CS_DBLCLKS;
     windowClass.lpfnWndProc = ::DefWindowProcW;
+    windowClass.hInstance = gInstance;
     windowClass.hCursor = ::LoadCursorW(0, IDC_ARROW);
     windowClass.hbrBackground = reinterpret_cast<HBRUSH>(COLOR_WINDOW + 1);
     windowClass.lpszClassName = windowClassName;
@@ -103,15 +106,31 @@ bool NetscapePlugin::platformInvalidate(const IntRect& invalidRect)
     return true;
 }
 
+enum RedrawOrNot { DoNotRedraw, Redraw };
+static void setWindowRegion(HWND window, PassOwnPtr<HRGN> popRegion, RedrawOrNot redrawOrNot)
+{
+    OwnPtr<HRGN> region = popRegion;
+
+    if (!::SetWindowRgn(window, region.get(), redrawOrNot == Redraw))
+        return;
+
+    // Windows owns the region now.
+    region.leakPtr();
+}
+
 void NetscapePlugin::platformGeometryDidChange()
 {
     if (!m_isWindowed)
         return;
 
+    IntRect clipRectInPluginWindowCoordinates = m_clipRect;
+    clipRectInPluginWindowCoordinates.move(-m_frameRect.x(), -m_frameRect.y());
+
+    OwnPtr<HRGN> clipRegion = adoptPtr(::CreateRectRgn(clipRectInPluginWindowCoordinates.x(), clipRectInPluginWindowCoordinates.y(), clipRectInPluginWindowCoordinates.right(), clipRectInPluginWindowCoordinates.bottom()));
+    setWindowRegion(m_window, clipRegion.release(), Redraw);
+
     // FIXME: We should only update the size here and let the UI process update our position so
     // that we can keep our position in sync when scrolling, etc.
-    // FIXME: We should also set a window region based on m_clipRect. Perhaps that should happen in
-    // the UI process, too.
     ::MoveWindow(m_window, m_frameRect.x(), m_frameRect.y(), m_frameRect.width(), m_frameRect.height(), TRUE);
 }
 
